# shifthelper

./: .gitignore  .travis.yml  Dockerfile  README.md  conda_env.yaml  config_example.ini  fact_exceptions.py  find_dark_spot.py  handle_QLA.py  handle_Skype.py  handle_cli.py  handle_cmd_line_UI.py  handle_dim_stuff.py  handle_statistics.py  handle_telegram.py  pandoc_cmd.txt  pylintrc  pyproject.toml  rationale.md  requirements.txt  run.sh  setup.py  shift_helper.py  why.md
.github/workflows/: ci.yml
checkers/: __init__.py  dim.py
checks/: __init__.py  computervision.py  dim.py  qla.py  webdim.py
cli/: __init__.py
communication/: __init__.py  skype_interface.py  telegram_interface.py  twilio_interface.py
docs/: convince_us.md  pandoc_cmd.txt  sent_flares_vs_sh_flare_alerts.txt  shifthelper_report_2017.md
fact_shift_helper/: __init__.py
fact_shift_helper/checks/: __init__.py  clouds.py  computervision.py  qla.py  webdim.py
fact_shift_helper/cli/: __init__.py
fact_shift_helper/communication/: caller.py  telegram_interface.py
fact_shift_helper/tools/: __init__.py  config.gpg  (+1 more)
find_dark_spot/: find_dark_spot.py
scripts/: fact_ircam  qla_bot  shift_helper
shifthelper/: __init__.py  __main__.py  categories.py  checks.py  conditions.py  debug_log_wrapper.py  idbot.py  logging.py  message_mixin.py  notifiers.py  qla.py  qlabot.py  retry_smart_fact_crawler.py  shepherd.py
tests/: test_ExponentialTimedActor.py  test_acknowledging.py  test_conditions.py  test_is_shift.py  test_nightly_resetting_defaultdict.py  test_shifter.py
tools/: __init__.py
(+34 files in other folders)
