[tool.poetry]
name = "shifthelper"
version = "1.8.0"
description = "a tool for helping people with a FACT night shift"
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
requests = "^2.25.1"
python-dateutil = "^2.8.1"
SQLAlchemy = "^1.4.12"
PyMySQL = "^1.0.2"
pytz = "^2021.1"
numexpr = "^2.7.3"
smart-fact-crawler = {url = "https://github.com/fact-project/smart_fact_crawler/archive/v0.7.0.tar.gz"}
custos = {version = "0.1.1", extras = ["all"]}
retrying = "^1.3.3"
wrapt = "^1.12.1"
python-json-logger = "^2.0.1"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pyflakes = "^2.3.1"
freezegun = "^1.1.0"

[tool.poetry.scripts]
shifthelper = 'shifthelper.__main__:main'
shifthelper_db_cloner = 'shifthelper.db_cloner.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


